tests/type_only_vars/type_only_vars.exp
Error -------------------------------------------------------------------------------------------- bad_shadowing.js:13:5

Cannot declare `A` [1] because the name is already bound.

   bad_shadowing.js:13:5
   13| var A: string = "Hello";
           ^

References:
   bad_shadowing.js:5:15
    5| import typeof A from "./A.js";
                     ^ [1]


Error -------------------------------------------------------------------------------------------- bad_shadowing.js:14:5

Cannot declare `Foo` [1] because the name is already bound.

   bad_shadowing.js:14:5
   14| var Foo: string = "Goodbye";
           ^^^

References:
   bad_shadowing.js:6:14
    6| import type {Foo, Bar as Baz} from "./A.js";
                    ^^^ [1]


Error -------------------------------------------------------------------------------------------- bad_shadowing.js:15:5

Cannot declare `Baz` [1] because the name is already bound.

   bad_shadowing.js:15:5
   15| var Baz: string = "Go away please";
           ^^^

References:
   bad_shadowing.js:6:26
    6| import type {Foo, Bar as Baz} from "./A.js";
                                ^^^ [1]


Error -------------------------------------------------------------------------------------------- bad_shadowing.js:18:5

Cannot declare `duck` [1] because the name is already bound.

   bad_shadowing.js:18:5
   18| var duck: string = "quack";
           ^^^^

References:
   bad_shadowing.js:8:6
    8| type duck = {
            ^^^^ [1]


Error -------------------------------------------------------------------------------------------- good_shadowing.js:8:5

Cannot declare `A` [1] because the name is already bound.

   good_shadowing.js:8:5
   8| var A = require('./A.js');
          ^

References:
   good_shadowing.js:5:15
   5| import typeof A from "./A.js";
                    ^ [1]


Error -------------------------------------------------------------------------------------------- good_shadowing.js:9:5

Cannot declare `Foo` [1] because the name is already bound.

   good_shadowing.js:9:5
   9| var Foo = A.Foo;
          ^^^

References:
   good_shadowing.js:6:14
   6| import type {Foo, Bar as Baz} from "./A.js";
                   ^^^ [1]


Error ------------------------------------------------------------------------------------------- good_shadowing.js:9:11

Cannot reference type `A` [1] from a value position.

   good_shadowing.js:9:11
   9| var Foo = A.Foo;
                ^

References:
   good_shadowing.js:5:15
   5| import typeof A from "./A.js";
                    ^ [1]


Error ------------------------------------------------------------------------------------------- good_shadowing.js:10:5

Cannot declare `Baz` [1] because the name is already bound.

   good_shadowing.js:10:5
   10| var Baz = A.Bar;
           ^^^

References:
   good_shadowing.js:6:26
    6| import type {Foo, Bar as Baz} from "./A.js";
                                ^^^ [1]


Error ------------------------------------------------------------------------------------------ good_shadowing.js:10:11

Cannot reference type `A` [1] from a value position.

   good_shadowing.js:10:11
   10| var Baz = A.Bar;
                 ^

References:
   good_shadowing.js:5:15
    5| import typeof A from "./A.js";
                     ^ [1]


Error ------------------------------------------------------------------------------------------- good_shadowing.js:13:9

Cannot reference type `A` [1] from a value position.

   good_shadowing.js:13:9
   13| var m = A;
               ^

References:
   good_shadowing.js:5:15
    5| import typeof A from "./A.js";
                     ^ [1]


Error ------------------------------------------------------------------------------------------- good_shadowing.js:14:9

Cannot reference type `Foo` [1] from a value position.

   good_shadowing.js:14:9
   14| var n = Foo;
               ^^^

References:
   good_shadowing.js:6:14
    6| import type {Foo, Bar as Baz} from "./A.js";
                    ^^^ [1]


Error ------------------------------------------------------------------------------------------- good_shadowing.js:15:9

Cannot reference type `Baz` [1] from a value position.

   good_shadowing.js:15:9
   15| var o = Baz;
               ^^^

References:
   good_shadowing.js:6:26
    6| import type {Foo, Bar as Baz} from "./A.js";
                                ^^^ [1]


Error ------------------------------------------------------------------------------------------ good_shadowing.js:18:18

Cannot reference type `Foo` [1] from a value position.

   good_shadowing.js:18:18
   18| var a: Foo = new Foo();
                        ^^^

References:
   good_shadowing.js:6:14
    6| import type {Foo, Bar as Baz} from "./A.js";
                    ^^^ [1]


Error ------------------------------------------------------------------------------------------ good_shadowing.js:19:18

Cannot reference type `A` [1] from a value position.

   good_shadowing.js:19:18
   19| var b: Foo = new A.Foo();
                        ^

References:
   good_shadowing.js:5:15
    5| import typeof A from "./A.js";
                     ^ [1]


Error ------------------------------------------------------------------------------------------- good_shadowing.js:20:6

Cannot reference type `A` [1] from a value position.

   good_shadowing.js:20:6
   20| (new A.Bar(): Baz);
            ^

References:
   good_shadowing.js:5:15
    5| import typeof A from "./A.js";
                     ^ [1]


Error ---------------------------------------------------------------------------------------------- import_type.js:11:9

Cannot reference type `A` [1] from a value position.

   import_type.js:11:9
   11| var m = A;
               ^

References:
   import_type.js:5:15
    5| import typeof A from "./A.js";
                     ^ [1]


Error ---------------------------------------------------------------------------------------------- import_type.js:12:9

Cannot reference type `Foo` [1] from a value position.

   import_type.js:12:9
   12| var n = Foo;
               ^^^

References:
   import_type.js:6:14
    6| import type {Foo, Bar as Baz} from "./A.js";
                    ^^^ [1]


Error ---------------------------------------------------------------------------------------------- import_type.js:13:9

Cannot reference type `Baz` [1] from a value position.

   import_type.js:13:9
   13| var o = Baz;
               ^^^

References:
   import_type.js:6:26
    6| import type {Foo, Bar as Baz} from "./A.js";
                                ^^^ [1]


Error ------------------------------------------------------------------------------------------------ type_alias.js:8:9

Cannot reference type `Foo` [1] from a value position.

   type_alias.js:8:9
   8| var x = Foo;
              ^^^

References:
   type_alias.js:5:6
   5| type Foo = number;
           ^^^ [1]



Found 19 errors
